updated  iframe code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
     <iframe
       src="https://docs.google.com/forms/d/e/1FAIpQLScHEa0ajzilDDumdyGYDcMAozuyEiswC3fTozjzHWHtUV8HuA/viewform?embedded=true"
       width="640"
@@ -13,8 +16,5 @@
       marginwidth="0"
       >Loading…</iframe
     >
-    , initial-scale=1.0">
-    <title>Document</title>
-  </head>
-  <body></body>
+  </body>
 </html>
