--- a/index.html
+++ b/index.html
@@ -9,12 +9,22 @@
   <body>
     <iframe
       src="https://docs.google.com/forms/d/e/1FAIpQLScHEa0ajzilDDumdyGYDcMAozuyEiswC3fTozjzHWHtUV8HuA/viewform?embedded=true"
-      width="640"
-      height="551"
+      width="1280"
+      height="800"
       frameborder="0"
       marginheight="0"
       marginwidth="0"
       >Loading…</iframe
     >
+    <style>
+      body {
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #afafaf;
+      }
+    </style>
   </body>
 </html>
