--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <iframe
       src="https://docs.google.com/forms/d/e/1FAIpQLScHEa0ajzilDDumdyGYDcMAozuyEiswC3fTozjzHWHtUV8HuA/viewform?embedded=true"
-      width="1280"
-      height="800"
+      width="800"
+      height="640"
       frameborder="0"
       marginheight="0"
       marginwidth="0"
@@ -18,6 +18,9 @@
     >
     <style>
       body {
+        margin: 0;
+        box-sizing: border-box;
+        font-size: 20px;
         width: 100vw;
         height: 100vh;
         display: flex;
