--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>enfrente.org</title>
   </head>
   <body>
     <iframe
@@ -26,7 +26,6 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: #afafaf;
       }
     </style>
   </body>
