--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9G993Z94D6"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-33LEJK12X9"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-9G993Z94D6');
+      gtag('config', 'G-33LEJK12X9');
     </script>
     <title>enfrente.org</title>
   </head>
